# comp-robo

./: .gitmodules  README.md
bags/drive_square/: drive_square_0.db3  metadata.yaml
bags/teleop/: metadata.yaml  teleop_0.db3
eightball_vision/: .gitignore  README.md  classify_stripes.py  hsv.py  pool_ball_detection.py  requirements.txt  setup_env.sh  test_ml.py
eightball_vision/approaches/circle_detection/: color_segmentation.py  hough_circle_detection.py  roboflow_ball_detection.py
eightball_vision/approaches/striped_classfication/: contrast_boundary_classifier.py  edge_band_classifier.py  hough_lines_classifier.py  hue_std_classifier.py  white_pixel_classifier.py
eightball_vision/archieve/: yolo_ball_detection.py
eightball_vision/data/: crop_image.py  rename_files.py
eightball_vision/data/Photos-orignal/: IMG_4890.HEIC  IMG_4893.HEIC  IMG_4895.HEIC  IMG_4896.HEIC  IMG_4897.HEIC  IMG_4898.HEIC  IMG_4903.HEIC  IMG_4905.HEIC  IMG_4907.HEIC  IMG_4908.HEIC
eightball_vision/data/photos-orignal/: IMG_4891.HEIC  (+26 more)
neato_fleet/: README.md
robo_localization/: package.xml  setup.cfg  setup.py
robo_localization/robo_localization/: send_message.py
robobehaviors_fsm/: README.md  package.xml  setup.cfg  setup.py
robobehaviors_fsm/bags/person_follow_with_marker/: metadata.yaml  person_follow_with_marker_0.db3
robobehaviors_fsm/bags/wall_follow_with_marker/: metadata.yaml  wall_follow_with_marker_0.db3
robobehaviors_fsm/launch/: fsm_launch.py
robobehaviors_fsm/robobehaviors_fsm/: drive_square.py  fsm_manager.py  person_follower.py  teleop.py  wall_follower.py
